# hands-on-cmake-tutorial

./: .gitignore  README.md
Step1/: CMakeLists.txt  README.md  tutorial.cxx
Step2/: CMakeLists.txt  README.md  tutorial.cxx
Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step3/: CMakeLists.txt  README.md
Step3/MathFunctions/: CMakeLists.txt
Step4/: CMakeLists.txt  README.md
